fix: guest navbar on mobile size

--- a/php/public/css/navbar.css
+++ b/php/public/css/navbar.css
@@ -92,15 +92,36 @@ nav ul li.active a::after {
 
 /* Responsive Navbar */
 @media (max-width: 768px) {
+    header {
+        padding-inline: 8px;
+    }
+
     nav {
         width: 100vw;
     }
 
     nav ul {
         gap: 0;
+        padding-inline: 0;
+    }
+
+    .nav-item img {
+        margin-top: 4px;
     }
 
     nav ul li a span {
         display: none;
+    }
+
+    /* button */
+    nav ul li a.btn-join-now,
+    nav ul li a.btn-sign-in {
+        min-width: max-content;
+        font-size: 16px;
+        padding: 4px 8px;
+    }
+
+    .logo {
+        margin-left: 8px;
     }
 }
